# metadata_migrate_sync

./: .gitignore  404.html  Dockerfile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: k8s.yml
Migration/: index.html
Migration/jsons/: verify_project.sh
Migration/jsons/chart_project/: index.html
Migration/jsons/sankey_project_datasets/: index.html
Migration/jsons/sankey_project_files/: index.html
Migration/jsons/table_project/: index.html
Notes/notes/: index.html
Synchronization/: index.html
TransferData/: index.html
TransferData/phase1/: index.html
TransferData/phase2/: index.html
Validation/: index.html
Validation/data_node_verification/: index.html
Validation/institution_id_verification/: index.html
Validation/project_verification/: index.html
docs/: index.md
docs/Notes/: notes.md
docs/Synchronization/: index.md
docs/TransferData/: index.md  phase1.md  phase2.md
docs/Validation/: index.md
docs/javascripts/: extra.js
helm/: Chart.yaml  values.yaml
helm/ci/: sync_dry_run.yaml
helm/templates/: _helpers.tpl  serviceaccount.yaml  statefulsets.yaml
javascripts/: extra.js
scripts/: crontab.txt  prod_sync_cmip6plus.sh  prod_sync_drcdp.sh  prod_sync_e3sm.sh  prod_sync_input4mips.sh  prod_sync_obs4mips.sh
search/: search_index.json
src/metadata_migrate_sync/: app.py  check_ingest_tasks.py  convert.py  database.py  db_query.py  delete.py  fixes.py  globus.py  gmeta.py  ingest.py  lite_model.py  migrate.py  project.py  provenance.py  query.py  replica.py  revise.py  solr.py  sync.py  transfer.py  util.py
src/metadata_migrate_sync/esgf_index_schema/: schema_cmipcv.py  schema_solr.py
stylesheets/: extra.css
tests/integration/: revise_conf.json  test_index_permission.sh  test_revise.json
tests/unit/: conftest.py  test_convert.py  test_database.py  test_globus.py  test_gmeta.py  test_ingest.py  test_lite_model.py  test_provenance.py  test_query.py  test_replica.py  test_sync.py  test_util.py
tests/unit/snapshots/test_globus/test_globus_index/: test_index_output.json
tests/unit/snapshots/test_ingest/test_solr_dataset/cmip3/: test_ingest_dataset_gmeta_listtest_solr_dataset[cmip3].json
tests/unit/snapshots/test_ingest/test_solr_dataset/cmip5/: test_ingest_dataset_gmeta_listtest_solr_dataset[cmip5].json
tests/unit/snapshots/test_ingest/test_solr_dataset/cmip6/: test_ingest_dataset_gmeta_listtest_solr_dataset[cmip6].json
tests/unit/snapshots/test_ingest/test_solr_file/cmip3/: test_ingest_file_gmeta_listtest_solr_file[cmip3].json
tests/unit/snapshots/test_ingest/test_solr_file/cmip5/: test_ingest_file_gmeta_listtest_solr_file[cmip5].json
tests/unit/snapshots/test_ingest/test_solr_file/cmip6/: test_ingest_file_gmeta_listtest_solr_file[cmip6].json
tests/unit/test_datasets/: dataset_solr_facet_cmip3.json  dataset_solr_facet_cmip5.json  dataset_solr_facet_cmip6.json  file_solr_facet_cmip3.json  file_solr_facet_cmip5.json  file_solr_facet_cmip6.json  replica_list.json  test_gmeta_sample.json
